--- a/shared/css/global.less
+++ b/shared/css/global.less
@@ -504,3 +504,12 @@ footer {
     text-align: center;
     padding: 10px 0;
 }
+
+
+details summary {
+    list-style: none;
+}
+
+details summary::-webkit-details-marker {
+    display: none;
+}
